--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.AddProduct"></activity>
+        <activity android:name=".Activities.OrderList"></activity>
+        <activity android:name=".Activities.AddProduct" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
