--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".AppLocationService"
+            android:permission="android.permission.ACCESS_FINE_LOCATION">
+        </service>
     </application>
 
 </manifest>
